<resources>
    <string name="app_name">MyCantNn_App</string>
    <string name="EMail">Email Address</string>
    <string name="Pwd">PassWord</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="request_to_new">Request To New</string>
    <string name="forget_password">Forget Password</string>
    <string name="host">Host</string>
    <string name="client">Client</string>
    <string name="Error_Login">Please Fill Any Empty Field</string>
    <string name="Pwd_not_match">Username And Password iS not Matched</string>
    <string name="Correct_pwd">Login Successfully</string>
    <string name="forgetUsername">Username</string>
    <string name="submit">submit</string>
    <string name="sendPwd">Password send to your Mail</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm PassWord</string>
    <string name="get_started">Get Started</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="passWord_reset_ins">We just need your registed email id to send password reset instruction</string>
    <string name="back"><![CDATA[<<Back]]></string>


    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_validity">Expires</string>
    <string name="card_cvv">CVV/CVC Number</string>


    <!-- TODO: For Bottom Navigation Bar-->

    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_bottomnavi">BottomnaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Order_status">Status</string>
    <string-array name="CanteenItem_arrays">
        <item>Snacks</item>
        <item>Cakes</item>
        <item>Drinks</item>
        <item>Dishes</item>
        <item>Sweets</item>
        <item>OtherItems</item>
    </string-array>

</resources>
