<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/navigation_cart"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_white_24dp"

        android:title="@string/title_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_shop"
        android:enabled="true"
        android:icon="@drawable/ic_store_white_24dp"

        android:title="@string/title_shop"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_OrderStatus12"
        android:enabled="true"
        android:icon="@drawable/ic_card_giftcard_white_24dp"
        android:title="My Orders"
        app:showAsAction="always" />


    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_white_24dp"

        android:title="@string/title_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/ClientNotificationBottomNavigation"
        android:icon="@mipmap/ic_system_update_alt_white_24dp"
        android:title="Notification"

        android:enabled="true"
        app:showAsAction="always"/>

</menu>
