<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clientLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hario.mycantnn_app.Host_login">


    <EditText
        android:id="@+id/clientEMail"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/clientPwd"
        android:layout_alignStart="@+id/clientPwd"
        android:layout_marginTop="186dp"
        android:allowUndo="true"
        android:ems="10"
        android:hint="@string/EMail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432"
        tools:targetApi="m" />


    <EditText
        android:id="@+id/clientPwd"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_below="@+id/clientEMail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Pwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientEMail"
        app:layout_constraintVertical_bias="0.067" />

    <Button
        android:id="@+id/clientButton"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_alignLeft="@+id/clientLogin_check"
        android:layout_alignStart="@+id/clientLogin_check"
        android:layout_below="@+id/clientLogin_check"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientPwd"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/clientSignup"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_alignLeft="@+id/clientButton"
        android:layout_alignStart="@+id/clientButton"
        android:layout_below="@+id/clientButton"
        android:layout_marginTop="12dp"
        android:text="@string/request_to_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientButton"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/clientForget"
        android:layout_width="122dp"
        android:layout_height="22dp"
        android:layout_alignBottom="@+id/clientSignup"
        android:layout_alignEnd="@+id/clientPwd"
        android:layout_alignRight="@+id/clientPwd"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientButton"
        app:layout_constraintVertical_bias="0.05" />

    <CheckBox
        android:id="@+id/clientLogin_check"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/clientPwd"
        android:layout_alignStart="@+id/clientPwd"
        android:layout_below="@+id/clientPwd"
        android:layout_marginTop="8dp"
        android:text="     Show PassWord" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/clientGoggleSign"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/clientSignup"
        android:layout_alignStart="@+id/clientSignup"
        android:layout_below="@+id/clientSignup"
        android:layout_marginTop="@dimen/margin_10"></com.google.android.gms.common.SignInButton>


    <ProgressBar
        android:id="@+id/HostprogressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>


